package sora.com.saleapi.repo;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;
import sora.com.saleapi.entity.User;

@Repository
public interface UserRepo extends JpaRepository<User, Long> {
}
